--- a/index.html
+++ b/index.html
@@ -282,9 +282,14 @@
     airline, and financial services domains.
   </p>
   <div class="cta">
-    <a href="#">Download Resume</a>
-    <a href="#contact">Contact</a>
-  </div>
+  <a href="Smrutiranjan_Pradhan_Resume.pdf" download target="_blank">
+    Download Resume
+  </a>
+  <a href="#contact">
+    Contact
+  </a>
+</div>
+
 </header>
 
 <section id="about">
@@ -421,3 +426,4 @@
 
 </body>
 </html>
+
